[package]
name = "aionforge-procedural"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural memory: skills-as-data and bad patterns with success-weighted retrieval."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.1" }
aionforge-store = { path = "../aionforge-store", version = "0.2.1" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
