[package]
name = "aionforge-redteam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Security red-team acceptance probes and structured reports for Aionforge Memory."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.0" }
aionforge-engine = { path = "../aionforge-engine", version = "0.2.0" }
aionforge-procedural = { path = "../aionforge-procedural", version = "0.2.0" }
aionforge-store = { path = "../aionforge-store", version = "0.2.0", features = ["test-support"] }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
