[package]
name = "aionforge-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hybrid retrieval: lexical/dense/graph/recency/trust signals, RRF fusion, query-class router, and the recall bundle."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.3.0" }
aionforge-store = { path = "../aionforge-store", version = "0.3.0" }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.3.0" }
aionforge-store = { path = "../aionforge-store", version = "0.3.0" }
tokio = { workspace = true }

[lints]
workspace = true
