[package]
name = "aionforge-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capture-side privacy/injection filtering, recall-side untrusted-data tagging, and the cross-family consolidation guard."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
aionforge-store = { path = "../aionforge-store", version = "0.2.2" }
regex = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
# Parses the vendored injection/benign corpus fixtures in tests/corpus (M6.T03).
# Dev-only: the shipped library stays free of a JSON dependency.
serde_json = { workspace = true }

[lints]
workspace = true
