[package]
name = "aionforge-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "L0 storage over the selene-db SharedGraph: typed read/write, parameter-bound GQL, schema/migration, and persistence."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
selene-core = { workspace = true }
selene-graph = { workspace = true }
# selene-persist is named directly only to lift its typed UnsupportedVersion
# recovery gate into StoreError::UnsupportedFormat (error.rs). The store-only-selene
# gate permits aionforge-store to name selene-db crates; no other crate may.
selene-persist = { workspace = true }
selene-gql = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
jiff = { workspace = true }

[lints]
workspace = true
