[package]
name = "aionforge-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "L0 storage over the selene-db SharedGraph: typed read/write, parameter-bound GQL, schema/migration, and persistence."

[features]
# Test-support seam: exposes `Store::seed_notes_for_test` for integration tests in sibling
# crates. Off by default, so the symbol is absent from the shipped library and the mcp binary.
test-support = []

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.3.0" }
# `metrics` lights up selene-db's internal instrumentation (queries, commits, WAL,
# snapshots, recoveries, cancellations, CALL-plan-cache hits, node/edge gauges) through
# the same `metrics` 0.24 facade this workspace already records on. Off, every selene
# emission compiles to a no-op, so the shared plan caches (PR5) and recall deadlines
# (PR7) are unobservable: `selene.gql.call_plan_cache.hits.total` and
# `selene.cancellations.total` never reach a recorder. The gating lives entirely in
# selene-core's helper bodies, so enabling it per crate (not just core) follows selene's
# public feature contract and stays correct if a future release moves a gate downstream.
# Like the rest of the tree, this only emits — installing a recorder is the operator's.
selene-core = { workspace = true, features = ["metrics"] }
selene-graph = { workspace = true, features = ["metrics"] }
# selene-persist is named directly only to lift its typed UnsupportedVersion
# recovery gate into StoreError::UnsupportedFormat (error.rs). The store-only-selene
# gate permits aionforge-store to name selene-db crates; no other crate may.
selene-persist = { workspace = true, features = ["metrics"] }
selene-gql = { workspace = true, features = ["metrics"] }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Self-path dev-dep so this crate's OWN integration tests build the linked lib with the
# `test-support` feature on (it must be enabled for the lib the integration test links).
aionforge-store = { path = ".", version = "0.3.0", features = ["test-support"] }
proptest = { workspace = true }
jiff = { workspace = true }

[lints]
workspace = true
