[package]
name = "aionforge-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Optional read-only ratatui operator TUI for Aionforge Memory."

[dependencies]
aionforge-engine = { path = "../aionforge-engine", version = "0.3.0" }
aionforge-domain = { path = "../aionforge-domain", version = "0.3.0" }

[lints]
workspace = true
