[package]
name = "aionforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The public Rust library API for the Aionforge Memory substrate."

[dependencies]
aionforge-engine = { path = "../aionforge-engine", version = "0.1.0" }
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-procedural = { path = "../aionforge-procedural", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
